Arreglos en footer query

--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -103,21 +103,21 @@
                     <div class="col-2">
                         <h5>Mapa de sitio</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted">Inicio</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/Envios.html" class="nav-link p-0 text-muted">Envíos</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/productos.html" class="nav-link p-0 text-muted">Productos</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/aromas.html" class="nav-link p-0 text-muted">Aromas</a></li>
+                            <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted linkMapaDeSitio">Inicio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/Envios.html" class="nav-link p-0 text-muted linkMapaDeSitio">Envíos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/productos.html" class="nav-link p-0 text-muted linkMapaDeSitio">Productos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/aromas.html" class="nav-link p-0 text-muted linkMapaDeSitio">Aromas</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5 class="parrafoMapaDeSitio">Mapa de sitio</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="../PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/conjunto.html" class="nav-link p-0 text-muted linkMapaDeSitio">Conjuntos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/pijama.html" class="nav-link p-0 text-muted linkMapaDeSitio">Pijamas</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted linkMapaDeSitio">Políticas de Cambio</a></li>
                             <li class="nav-item mb-2 ">
                                 <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
-                                    class="nav-link p-0 text-muted" target="_blank">!Veni a conocernos!
+                                    class="nav-link p-0 text-muted linkMapaDeSitio__1" target="_blank">!Vení a conocernos!
                                 </a>
                             </li>
                         </ul>
@@ -131,7 +131,7 @@
                                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
                                 <button class="btn  botonSubscribirseFooter" type="button">Subscribite</button>
                             </div>
-                            <a href="./PAGINAS/contacto.html">
+                            <a href="../PAGINAS/contacto.html">
                                 <button class="btn  botonFooterContacto" type="button">¿Quieres contactarte?Presiona Aqui!</button>
                             </a>
                         </form>
