--- a/PAGINAS/contacto.html
+++ b/PAGINAS/contacto.html
@@ -88,8 +88,8 @@
                 </div>
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
-                <div class="container px-5">
-                    <iframe class="footerGeneral__veniAConocernos__googleMaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
+                <div class="container px-5 ">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
                     style="border:0;" allowfullscreen="" alt="Example image" width="700" height="500" loading="lazy"></iframe>
                 </div>
             </div>
@@ -101,21 +101,21 @@
                     <div class="col-2">
                         <h5>Mapa de sitio</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted">Inicio</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/Envios.html" class="nav-link p-0 text-muted">Envíos</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/productos.html" class="nav-link p-0 text-muted">Productos</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/aromas.html" class="nav-link p-0 text-muted">Aromas</a></li>
+                            <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted linkMapaDeSitio">Inicio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/Envios.html" class="nav-link p-0 text-muted linkMapaDeSitio">Envíos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/productos.html" class="nav-link p-0 text-muted linkMapaDeSitio">Productos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/aromas.html" class="nav-link p-0 text-muted linkMapaDeSitio">Aromas</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5 class="parrafoMapaDeSitio">Mapa de sitio</h5>
                         <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="../PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
-                            <li class="nav-item mb-2"><a href="../PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/conjunto.html" class="nav-link p-0 text-muted linkMapaDeSitio">Conjuntos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/pijama.html" class="nav-link p-0 text-muted linkMapaDeSitio">Pijamas</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted linkMapaDeSitio">Políticas de Cambio</a></li>
                             <li class="nav-item mb-2 ">
                                 <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
-                                    class="nav-link p-0 text-muted" target="_blank">!Veni a conocernos!
+                                    class="nav-link p-0 text-muted linkMapaDeSitio__1" target="_blank">!Vení a conocernos!
                                 </a>
                             </li>
                         </ul>
@@ -129,7 +129,7 @@
                                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
                                 <button class="btn  botonSubscribirseFooter" type="button">Subscribite</button>
                             </div>
-                            <a href="./PAGINAS/contacto.html">
+                            <a href="../PAGINAS/contacto.html">
                                 <button class="btn  botonFooterContacto" type="button">¿Quieres contactarte?Presiona Aqui!</button>
                             </a>
                         </form>
