--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         </div>
     </header>
     <main class=" container mainGeneral dos  ">
-        <div class="contenedorCarrouselSoloInicio">
             <div class=" container mainGeneral__mainInicio">
                 <h2>Bienvenidos</h2>
             </div>
@@ -82,13 +81,13 @@
                 <div id="carouselExampleControls" class="  carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img src="/IMAGENES/banner02.png" class="fotoCarrousel d-block " alt="imagen mainInicio uno">
+                            <img src="/IMAGENES/banner02.png" class="fotoCarrousel d-block img-fluid " alt="imagen mainInicio uno">
                         </div>
                         <div class="carousel-item">
-                            <img src="/IMAGENES/banner01.png" class="fotoCarrousel d-block " alt="imagen mainInicio dos">
+                            <img src="/IMAGENES/banner01.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio dos">
                         </div>
                         <div class="carousel-item active">
-                            <img src="/IMAGENES/banner03.png" class="fotoCarrousel d-block " alt="imagen mainInicio tres">
+                            <img src="/IMAGENES/banner03.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio tres">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -101,27 +100,26 @@
                     </button>
                 </div>
             </div>
-        </div>
         <div class="destacados">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 <a href="/PAGINAS/aromas.html">
                     <div class="col">
-                        <div class="card shadow-sm"> 
-                            <img src="/IMAGENES/BannerAromas.png" alt="Aromas">
+                        <div class="card shadow-sm imagenLinkInicio1"> 
+                            <img src="/IMAGENES/BannerAromas.png" alt="Aromas" class="img-thumbnail">
                         </div>
                     </div>
                 </a>
                 <a href="/PAGINAS/conjunto.html">
                     <div class="col">
-                        <div class="card shadow-sm">
-                            <img src="/IMAGENES/BannerConjuntos.png" alt="Aromas">
+                        <div class="card shadow-sm imagenLinkInicio">
+                            <img src="/IMAGENES/BannerConjuntos.png" alt="Aromas" class="img-thumbnail">
                         </div>
                     </div>
                 </a>
                 <a href="/PAGINAS/pijama.html">
                     <div class="col">
-                        <div class="card shadow-sm">
-                            <img src="/IMAGENES/BannerPijamas.png" alt="Aromas">
+                        <div class="card shadow-sm imagenLinkInicio">
+                            <img src="/IMAGENES/BannerPijamas.png" alt="Aromas" class="img-thumbnail">
                         </div>
                     </div>
                 </a>
@@ -133,21 +131,21 @@
                     <div class="col-2">
                         <h5>Mapa de sitio</h5>
                         <ul class="nav flex-column ">
-                            <li class="nav-item mb-2 "><a href="index.html" class="nav-link p-0 text-muted">Inicio</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/Envios.html" class="nav-link p-0 text-muted">Envíos</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/productos.html" class="nav-link p-0 text-muted">Productos</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/aromas.html" class="nav-link p-0 text-muted">Aromas</a></li>
+                            <li class="nav-item mb-2 "><a href="index.html" class="nav-link p-0 text-muted linkMapaDeSitio">Inicio</a></li>
+                            <li class="nav-item mb-2 "><a href="./PAGINAS/Envios.html" class="nav-link p-0 text-muted linkMapaDeSitio">Envíos</a></li>
+                            <li class="nav-item mb-2 "><a href="./PAGINAS/productos.html" class="nav-link p-0 text-muted linkMapaDeSitio">Productos</a></li>
+                            <li class="nav-item mb-2 "><a href="./PAGINAS/aromas.html" class="nav-link p-0 text-muted linkMapaDeSitio">Aromas</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5 class="parrafoMapaDeSitio">Mapa de sitio</h5>
                         <ul class="nav flex-column ">
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted">Conjuntos</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted">Pijamas</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted">Políticas de Cambio</a></li>
+                            <li class="nav-item mb-2 "><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted linkMapaDeSitio">Conjuntos</a></li>
+                            <li class="nav-item mb-2 "><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted linkMapaDeSitio">Pijamas</a></li>
+                            <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted linkMapaDeSitio">Políticas de Cambio</a></li>
                             <li class="nav-item mb-2 ">
                                 <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
-                                    class="nav-link p-0 text-muted" target="_blank">!Veni a conocernos!
+                                    class="nav-link p-0 text-muted linkMapaDeSitio__1" target="_blank">!Vení a conocernos!
                                 </a>
                             </li>
                         </ul>
