--- a/PAGINAS/Envios.html
+++ b/PAGINAS/Envios.html
@@ -81,13 +81,13 @@
                     <img src="../IMAGENES/stock.jpg" class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" width="700" height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6 ">   
-                    <div class="d-grid gap-2">
-                        <div class=" mainGeneral__partePrincipalParrafoEnvios p-2  border">
-                            <p class="  mx-auto" style="width: 200px;"><strong>ENVIOS</strong></p>
+                    <div >
+                        <div >
+                            <p ><strong>ENVIOS</strong></p>
                             <p >Podés chequear el precio de envío al momento de hacer la compra 
                                 o contactarnos por privado 
                             </p>
-                            <ul class="p-4 "><strong>¡Hacemos envíos a los siguientes destinos!</strong> 
+                            <ul ><strong>¡Hacemos envíos a los siguientes destinos!</strong> 
                                 <li>Merlo</li>
                                 <li>Paso del Rey</li>
                                 <li>Ituzaingó</li>
