--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -75,8 +75,8 @@
     </header>
     <main class=" container mainGeneral dos  ">
             <div class="d-grid gap-2">
-                <div class=" mainGeneral__partePrincipalParrafoPoliticas p-5  border">
-                    <p class=" fs-5  mx-auto" style="width: 300px;">POLÍTICAS DE CAMBIO</p>
+                <div class=" mainGeneral__partePrincipalParrafoPoliticas   border">
+                    <p class="   mx-auto" style="width: 300px;"><strong>POLÍTICAS DE CAMBIO</strong></p>
                     <p class="lh-lg">
                         Podés hacer el cambio de un producto si no estás conforme o si el talle no es el correcto, tenés 15 días de corrido desde la fecha de la compra. Para efectuarlo, la prenda debe estar en perfecto estado, sin uso y con la etiqueta puesta. 
                         De lo contrario no haremos el cambio.
