mas modificaciones de seo

--- a/PAGINAS/aromas.html
+++ b/PAGINAS/aromas.html
@@ -41,7 +41,7 @@
             <!--LISTA MENU-->
             <div  class="encabezadoGeneral__contenedorListaMenu navPrincipal ">
                 <input type="checkbox" id="btn-menu">
-                <label for="btn-menu"><img src="../IMAGENES/menuBurger.jpg" ></label>
+                <label for="btn-menu"><img src="../IMAGENES/menuBurger.jpg"  alt="foto burger menu"></label>
                 <nav class="menu">
                     <ul class="encabezadoGeneral__contenedorListaMenu__listaMenu " >
                         <li>
