--- a/PAGINAS/Envios.html
+++ b/PAGINAS/Envios.html
@@ -75,19 +75,17 @@
             </div>
     </header>
     <main class=" container mainGeneral dos  ">
-        <div class="container col-xxl-8 px-4 py-5">
+        <div class="container col-xxl-8 px-4 py-5 ">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
                     <img src="../IMAGENES/stock.jpg" class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" width="700" height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6 ">   
-                    <div >
-                        <div >
-                            <p ><strong>ENVIOS</strong></p>
+                            <h2 >ENVIOS</h2>
                             <p >Podés chequear el precio de envío al momento de hacer la compra 
                                 o contactarnos por privado 
                             </p>
-                            <ul ><strong>¡Hacemos envíos a los siguientes destinos!</strong> 
+                            <ul ><h4 >¡Hacemos envíos a los siguientes destinos!</h4>
                                 <li>Merlo</li>
                                 <li>Paso del Rey</li>
                                 <li>Ituzaingó</li>
@@ -109,8 +107,6 @@
                                 <li>San Justo</li>
                                 <li>Caseros</li>
                             </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
