ultimas modificaciones seo

--- a/PAGINAS/Envios.html
+++ b/PAGINAS/Envios.html
@@ -85,7 +85,8 @@
                             <p >Podés chequear el precio de envío al momento de hacer la compra 
                                 o contactarnos por privado 
                             </p>
-                            <ul ><h4 >¡Hacemos envíos a los siguientes destinos!</h4>
+                            <p class="h4">¡Hacemos envíos a los siguientes destinos!</p>
+                            <ul >
                                 <li>Merlo</li>
                                 <li>Paso del Rey</li>
                                 <li>Ituzaingó</li>
