--- a/PAGINAS/PoliticasDeCambio.html
+++ b/PAGINAS/PoliticasDeCambio.html
@@ -76,12 +76,13 @@
     <main class=" container mainGeneral dos  ">
             <div class="d-grid gap-2">
                 <div class=" mainGeneral__partePrincipalParrafoPoliticas   border">
-                    <p class="   mx-auto" style="width: 300px;"><h2>POLÍTICAS DE CAMBIO</h2></p>
+                    <h2>POLÍTICAS DE CAMBIO</h2>
                     <p class="lh-lg">
                         Podés hacer el cambio de un producto si no estás conforme o si el talle no es el correcto, tenés 15 días de corrido desde la fecha de la compra. Para efectuarlo, la prenda debe estar en perfecto estado, sin uso y con la etiqueta puesta. 
                         De lo contrario no haremos el cambio.
                     </p>
-                    <ol class="p-3"><h2>¿Cómo realizarlo?</h2>
+                    <p class="h4">¿Cómo realizarlo?</p>
+                    <ol class="p-3">
                         <li class="lh-lg">
                             Podés contactarnos por Instagram (@chilosClothe&Perfume) o a través de nuestro chat.
                         </li>
