--- a/PAGINAS/contacto.html
+++ b/PAGINAS/contacto.html
@@ -90,7 +90,7 @@
             <div class="overflow-hidden" style="max-height: 30vh;">
                 <div class="container px-5 ">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.8214633243174!2d-58.63167448447453!3d-34.63395178045155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb8bc768e1ea5%3A0x292c54382e196f96!2sPlaza%20Oeste%20Shopping!5e0!3m2!1ses!2sar!4v1633564318994!5m2!1ses!2sar"
-                    style="border:0;" allowfullscreen="" alt="Example image" width="700" height="500" loading="lazy"></iframe>
+                    style="border:0;" allowfullscreen="" width="700" height="500" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
