--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Indumentaria, Pijama,Aromas, Conjunto, Productos ">
-    <meta name="description" content=" Este es el sitio web de venta de indumentaria femenina y aromas en el que encontrarás precios, imágenes,donde encontrarnos, métodos de pago y mucho más ">
+    <meta name="keywords" content="Envios">
+    <meta name="description" content=" Pagina web de  venta lugares de envio de compra de productos de indumentaria y aromas por zona oeste ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/40b77f4765.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Envíos</title>
 </head>
 <body class=" contenedorGeneral">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -30,120 +32,121 @@
         <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
         </symbol>
     </svg>
-    
     <header class="encabezadoGeneral uno">
-        <!--TITULO HEADER-->
-        <div class="encabezadoGeneral__sectionTres">
-            <h1>
-                <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="../index.html">Chilos Clothe & Fragance</a>
-            </h1>
-        </div>
-        <!--LISTA MENU-->
-        <div  class="encabezadoGeneral__contenedorListaMenu navPrincipal ">
-            <input type="checkbox" id="btn-menu">
-            <label for="btn-menu"><img src="./IMAGENES/menuBurger.jpg" alt="foto burger menu"></label>
-            <nav class="menu">
-                <ul class="encabezadoGeneral__contenedorListaMenu__listaMenu " >
-                    <li>
-                        <a href="./index.html">Inicio</a> 
-                    </li>
-                    <li class="productos">
-                        <a href="./PAGINAS/productos.html">Productos</a>
-                        <ul class="subMenu">
-                            <li>
-                                <a href="./PAGINAS/conjunto.html">Conjunto</a>
-                            </li>
-                            <li>
-                                <a href="./PAGINAS/pijama.html">Pijama</a>
-                            </li>
-                            <li>
-                                <a href="./PAGINAS/aromas.html">Aromas</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="./PAGINAS/Envios.html">Envíos</a>
-                    <li>
-                        <a href="./PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
-                    </li>
-                    <li>
-                        <a href="./PAGINAS/contacto.html">Contacto</a> 
-                    </li>
-                </ul>
-            </nav>
-        </div>
+            <!--TITULO HEADER-->
+            <div class="encabezadoGeneral__sectionTres">
+                <h1>
+                    <a class="encabezadoGeneral__sectionTres__tituloPrincipal" href="../index.html">Chilos Clothe & Fragance</a>
+                </h1>
+            </div>
+            <!--LISTA MENU-->
+            <div  class="encabezadoGeneral__contenedorListaMenu navPrincipal ">
+                <input type="checkbox" id="btn-menu">
+                <label for="btn-menu"><img src="../IMAGENES/menuBurger.jpg" alt="foto burger menu" ></label>
+                <nav class="menu">
+                    <ul class="encabezadoGeneral__contenedorListaMenu__listaMenu " >
+                        <li>
+                            <a href="../index.html">Inicio</a> 
+                        </li>
+                        <li class="productos">
+                            <a href="./productos.html">Productos</a>
+                            <ul class="subMenu">
+                                <li>
+                                    <a href="./conjunto.html">Conjunto</a>
+                                </li>
+                                <li>
+                                    <a href="./pijama.html">Pijama</a>
+                                </li>
+                                <li>
+                                    <a href="./aromas.html">Aromas</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="./Envios.html">Envíos</a>
+                        <li>
+                            <a href="./PoliticasDeCambio.html">Políticas de cambio</a>
+                        </li>
+                        <li>
+                            <a href="../PAGINAS/contacto.html">Contacto</a> 
+                        </li>
+                    </ul>
+                </nav>
+            </div>
     </header>
+
+
     <main class=" container mainGeneral dos  ">
-            <div class=" container mainGeneral__mainInicio">
-                <h2>Bienvenidos</h2>
-            </div>
-            <div class="container ">
-                <div id="carouselExampleControls" class="  carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item">
-                            <img src="/IMAGENES/banner02.png" class="fotoCarrousel d-block img-fluid " alt="imagen mainInicio uno">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/IMAGENES/banner01.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio dos">
-                        </div>
-                        <div class="carousel-item active">
-                            <img src="/IMAGENES/banner03.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio tres">
-                        </div>
+        <div class=" container mainGeneral__mainInicio">
+            <h2>Bienvenidos</h2>
+        </div>
+        <div class="container ">
+            <div id="carouselExampleControls" class="  carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="/IMAGENES/banner02.png" class="fotoCarrousel d-block img-fluid " alt="imagen mainInicio uno">
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="/IMAGENES/banner01.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio dos">
+                    </div>
+                    <div class="carousel-item active">
+                        <img src="/IMAGENES/banner03.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio tres">
+                    </div>
                 </div>
-            </div>
-        <div class="destacados">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <a href="/PAGINAS/aromas.html">
-                    <div class="col">
-                        <div class="card shadow-sm imagenLinkInicio1"> 
-                            <img src="/IMAGENES/BannerAromas.png" alt="Aromas" class="img-thumbnail">
-                        </div>
-                    </div>
-                </a>
-                <a href="/PAGINAS/conjunto.html">
-                    <div class="col">
-                        <div class="card shadow-sm imagenLinkInicio">
-                            <img src="/IMAGENES/BannerConjuntos.png" alt="Aromas" class="img-thumbnail">
-                        </div>
-                    </div>
-                </a>
-                <a href="/PAGINAS/pijama.html">
-                    <div class="col">
-                        <div class="card shadow-sm imagenLinkInicio">
-                            <img src="/IMAGENES/BannerPijamas.png" alt="Aromas" class="img-thumbnail">
-                        </div>
-                    </div>
-                </a>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
+    <div class="destacados">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <a href="/PAGINAS/aromas.html">
+                <div class="col">
+                    <div class="card shadow-sm imagenLinkInicio1"> 
+                        <img src="/IMAGENES/BannerAromas.png" alt="Aromas" class="img-thumbnail">
+                    </div>
+                </div>
+            </a>
+            <a href="/PAGINAS/conjunto.html">
+                <div class="col">
+                    <div class="card shadow-sm imagenLinkInicio">
+                        <img src="/IMAGENES/BannerConjuntos.png" alt="Aromas" class="img-thumbnail">
+                    </div>
+                </div>
+            </a>
+            <a href="/PAGINAS/pijama.html">
+                <div class="col">
+                    <div class="card shadow-sm imagenLinkInicio">
+                        <img src="/IMAGENES/BannerPijamas.png" alt="Aromas" class="img-thumbnail">
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
     </main>
     <footer class="footerGeneral tres  ">
         <div class="container">
                 <div class="row  justify-content-between ">
                     <div class="col-2">
                         <h5>Mapa de sitio</h5>
-                        <ul class="nav flex-column ">
-                            <li class="nav-item mb-2 "><a href="index.html" class="nav-link p-0 text-muted linkMapaDeSitio">Inicio</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/Envios.html" class="nav-link p-0 text-muted linkMapaDeSitio">Envíos</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/productos.html" class="nav-link p-0 text-muted linkMapaDeSitio">Productos</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/aromas.html" class="nav-link p-0 text-muted linkMapaDeSitio">Aromas</a></li>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted linkMapaDeSitio">Inicio</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/Envios.html" class="nav-link p-0 text-muted linkMapaDeSitio">Envíos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/productos.html" class="nav-link p-0 text-muted linkMapaDeSitio">Productos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/aromas.html" class="nav-link p-0 text-muted linkMapaDeSitio">Aromas</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5 class="parrafoMapaDeSitio">Mapa de sitio</h5>
-                        <ul class="nav flex-column ">
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/conjunto.html" class="nav-link p-0 text-muted linkMapaDeSitio">Conjuntos</a></li>
-                            <li class="nav-item mb-2 "><a href="./PAGINAS/pijama.html" class="nav-link p-0 text-muted linkMapaDeSitio">Pijamas</a></li>
-                            <li class="nav-item mb-2"><a href="./PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted linkMapaDeSitio">Políticas de Cambio</a></li>
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="../PAGINAS/conjunto.html" class="nav-link p-0 text-muted linkMapaDeSitio">Conjuntos</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/pijama.html" class="nav-link p-0 text-muted linkMapaDeSitio">Pijamas</a></li>
+                            <li class="nav-item mb-2"><a href="../PAGINAS/PoliticasDeCambio.html" class="nav-link p-0 text-muted linkMapaDeSitio">Políticas de Cambio</a></li>
                             <li class="nav-item mb-2 ">
                                 <a href="https://www.google.com.ar/maps/place/Plaza+Oeste+Shopping/@-34.6339474,-58.6316745,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb8bc768e1ea5:0x292c54382e196f96!8m2!3d-34.6339518!4d-58.6294858" 
                                     class="nav-link p-0 text-muted linkMapaDeSitio__1" target="_blank">!Vení a conocernos!
@@ -160,7 +163,7 @@
                                 <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
                                 <button class="btn  botonSubscribirseFooter" type="button">Subscribite</button>
                             </div>
-                            <a href="./PAGINAS/contacto.html" >
+                            <a href="../PAGINAS/contacto.html">
                                 <button class="btn  botonFooterContacto" type="button">¿Quieres contactarte?Presiona Aqui!</button>
                             </a>
                         </form>
@@ -178,5 +181,30 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+</body>          
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
