modificaciones para que que funcione en gitHub

--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
                             <a href="./index.html">Inicio</a> 
                         </li>
                         <li class="productos">
-                            <a href="./PAGINAS/productos.html">Productos</a>
+                            <a href="../PAGINAS/productos.html">Productos</a>
                             <ul class="subMenu">
                                 <li>
-                                    <a href="./PAGINAS/conjunto.html">Conjunto</a>
+                                    <a href="../PAGINAS/conjunto.html">Conjunto</a>
                                 </li>
                                 <li>
-                                    <a href="./PAGINAS/pijama.html">Pijama</a>
+                                    <a href="../PAGINAS/pijama.html">Pijama</a>
                                 </li>
                                 <li>
-                                    <a href="./PAGINAS/aromas.html">Aromas</a>
+                                    <a href="../PAGINAS/aromas.html">Aromas</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="./PAGINAS/Envios.html">Envíos</a>
+                            <a href="../PAGINAS/Envios.html">Envíos</a>
                         <li>
-                            <a href="./PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
+                            <a href="../PAGINAS/PoliticasDeCambio.html">Políticas de cambio</a>
                         </li>
                         <li>
-                            <a href="./PAGINAS/contacto.html">Contacto</a> 
+                            <a href="../PAGINAS/contacto.html">Contacto</a> 
                         </li>
                     </ul>
                 </nav>
@@ -84,13 +84,13 @@
             <div id="carouselExampleControls" class="  carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item">
-                        <img src="./IMAGENES/banner02.png" class="fotoCarrousel d-block img-fluid " alt="imagen mainInicio uno">
+                        <img src="../IMAGENES/banner02.png" class="fotoCarrousel d-block img-fluid " alt="imagen mainInicio uno">
                     </div>
                     <div class="carousel-item">
-                        <img src="./IMAGENES/banner01.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio dos">
+                        <img src="../IMAGENES/banner01.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio dos">
                     </div>
                     <div class="carousel-item active">
-                        <img src="./IMAGENES/banner03.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio tres">
+                        <img src="../IMAGENES/banner03.png" class="fotoCarrousel d-block img-fluid" alt="imagen mainInicio tres">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -105,24 +105,24 @@
         </div>
     <div class="destacados">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <a href="./PAGINAS/aromas.html">
+            <a href="../PAGINAS/aromas.html">
                 <div class="col">
                     <div class="card shadow-sm imagenLinkInicio1"> 
-                        <img src="./IMAGENES/BannerAromas.png" alt="Aromas" class="img-thumbnail">
+                        <img src="../IMAGENES/BannerAromas.png" alt="Aromas" class="img-thumbnail">
                     </div>
                 </div>
             </a>
-            <a href="./PAGINAS/conjunto.html">
+            <a href="../PAGINAS/conjunto.html">
                 <div class="col">
                     <div class="card shadow-sm imagenLinkInicio">
-                        <img src="./IMAGENES/BannerConjuntos.png" alt="Aromas" class="img-thumbnail">
+                        <img src="../IMAGENES/BannerConjuntos.png" alt="Aromas" class="img-thumbnail">
                     </div>
                 </div>
             </a>
-            <a href="./PAGINAS/pijama.html">
+            <a href="../PAGINAS/pijama.html">
                 <div class="col">
                     <div class="card shadow-sm imagenLinkInicio">
-                        <img src="./IMAGENES/BannerPijamas.png" alt="Aromas" class="img-thumbnail">
+                        <img src="../IMAGENES/BannerPijamas.png" alt="Aromas" class="img-thumbnail">
                     </div>
                 </div>
             </a>
