cambio de nombre de pagina web de Envios a Inicio

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Envíos</title>
+    <title>Inicio</title>
 </head>
 <body class=" contenedorGeneral">
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
